# autoresearch

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  analysis.ipynb  mnemebrain_hooks.py  platform_config.py  prepare.py  program.md  pyproject.toml  results_analyzer.py  train.py
.github/workflows/: ci.yml  codeql.yml  e2e.yml  gitleaks.yml
docs/: decision-policy.md  experiment-protocol.md  mnemebrain-sidecar.md  plan-mnemebrain-conditions.md
hooks/: __init__.py  analysis.py  artifacts.py  base.py  claims.py  condition_a.py  condition_b.py  condition_c.py  condition_d.py  log_capture.py  types.py
models/: __init__.py  base.py  gpt2.py  nanochat.py
results/runs/condition_A/seed_42/: run_001.json  run_002.json  run_003.json  run_004.json  run_005.json  run_006.json  run_007.json  run_008.json  run_009.json  run_010.json  run_011.json  run_012.json  run_013.json
results/summaries/: condition_A_summary.json  condition_A_summary.md
tests/: conftest.py  test_e2e_mnemebrain.py  test_hooks.py  test_hooks_analysis.py  test_hooks_artifacts.py  test_hooks_claims.py  test_hooks_conditions.py  test_hooks_log_capture.py  test_hooks_types.py  test_model_registry.py  test_platform.py  test_results_analyzer.py  test_train.py
